k8s/shipping-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
      - name: shipping-service
        image: shipping-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5007
