k8s/orders-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders-service
  ports:
  - protocol: TCP
    port: 5004
    targetPort: 5004
