k8s/products-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products-service
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
