k8s/shipping-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping-service
  ports:
    - protocol: TCP
      port: 5007
      targetPort: 5007
